// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
.c0 {
  display: inline-block;
  vertical-align: top;
  width: 24px;
  height: 24px;
  line-height: 24px;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 24px;
  background-color: #4b9fd5;
  color: #fff;
  font-size: 12px;
  text-align: center;
  text-shadow: 0 0 1px rgba(0,0,0,0.35);
}

<SizeRating
  className="c0"
  value={3}
/>
`;

exports[`renders muted 1`] = `
.c0 {
  display: inline-block;
  vertical-align: top;
  width: 24px;
  height: 24px;
  line-height: 24px;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 24px;
  background-color: #bdbdbd;
  color: #fff;
  font-size: 12px;
  text-align: center;
  text-shadow: 0 0 1px rgba(0,0,0,0.35);
}

<SizeRating
  className="c0"
  muted={true}
  value={3}
/>
`;

exports[`renders small 1`] = `
.c0 {
  display: inline-block;
  vertical-align: top;
  width: 18px;
  height: 18px;
  line-height: 18px;
  margin-top: -1px;
  margin-bottom: -1px;
  border-radius: 18px;
  background-color: #4b9fd5;
  color: #fff;
  font-size: 10px;
  text-align: center;
  text-shadow: 0 0 1px rgba(0,0,0,0.35);
}

<SizeRating
  className="c0"
  small={true}
  value={3}
/>
`;

exports[`renders small and muted 1`] = `
.c0 {
  display: inline-block;
  vertical-align: top;
  width: 18px;
  height: 18px;
  line-height: 18px;
  margin-top: -1px;
  margin-bottom: -1px;
  border-radius: 18px;
  background-color: #bdbdbd;
  color: #fff;
  font-size: 10px;
  text-align: center;
  text-shadow: 0 0 1px rgba(0,0,0,0.35);
}

<SizeRating
  className="c0"
  muted={true}
  small={true}
  value={3}
/>
`;
